# doc/openapi.yaml
@@ -163,6 +163,53 @@ paths:
               required:
                 - email
                 - password
+  /api/company/interview:
+    get:
+      summary: Your GET endpoint
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  interview_datetime:
+                    type: string
+                    description: 面談日時
+                  interview_status:
+                    type: string
+                    description: 面談状況
+                  user_name:
+                    type: string
+                    description: ユーザー名
+                required:
+                  - interview_datetime
+                  - interview_status
+                  - user_name
+        '201':
+          description: Created
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+      operationId: get-api-company-interview
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Authorization
+          description: APItoken
+          required: true
+      description: ''
+    parameters: []
 components:
   schemas:
     User:
@@ -210,3 +257,4 @@ components:
         - email
         - password
         - profile
+  securitySchemes: {}
