# routes/api.php
@@ -23,5 +23,5 @@ Route::post('/user/login','\App\Http\Controllers\UserController@loginUser');
 Route::post('/company', '\App\Http\Controllers\CompanyController@createCompany');
 Route::post('/company/login','\App\Http\Controllers\CompanyController@loginCompany')
     ->name('login');
-Route::get('/company/interview','\App\Http\Controllers\CompanyController@getInterview')
-    ->middleware('auth:sanctum');
+Route::middleware('auth:sanctum')
+    ->get('/company/interview','\App\Http\Controllers\CompanyController@getInterview');
